--- a/src/vscp/linuxvscpl1/Makefile.in
+++ b/src/vscp/linuxvscpl1/Makefile.in
@@ -35,8 +35,8 @@ DLLPREFIX = lib
 WX_RELEASE = 2.8
 LIBDIRNAME = $(top_wxbuilddir)lib
 
-VSCPL1_OBJECTS =  vscpl1.o  ../common/vscpremotetcpif.o ../common/vscphelper.o ../common/guid.o ../../common/crc.o
-PROJOBJS        =  ../common/vscpremotetcpif.o ../common/vscphelper.o  ../../common/crc.o ../../common/crc8.o ../common/guid.o
+VSCPL1_OBJECTS =  vscpl1.o  ../common/vscpremotetcpif.o ../common/vscphelper.o ../common/guid.o ../../common/crc.o ../../common/crc8.o ../../common/net_skeleton.o
+PROJOBJS        =  ../common/vscpremotetcpif.o ../common/vscphelper.o  ../../common/crc.o ../../common/crc8.o ../common/guid.o ../../common/net_skeleton.o
 
 
 
