--- a/src/vscp/drivers/level1/xap/linux/Makefile.in
+++ b/src/vscp/drivers/level1/xap/linux/Makefile.in
@@ -36,7 +36,7 @@ WX_RELEASE = 2.6
 LIBDIRNAME = $(top_wxbuilddir)lib
 
 XAPDRV_OBJECTS =  xapdrv.o ../common/xapobj.o 
-PROJOBJS        =     ../../../../common/guid.o  ../../../../../common/dllist.o ../../../../common/devicelist.o
+PROJOBJS        =     ../../../../common/guid.o  ../../../../../common/dllist.o 
 
 
 ### Targets: ###
