--- a/src/vscp/drivers/level1/can232/linux/Makefile.in
+++ b/src/vscp/drivers/level1/can232/linux/Makefile.in
@@ -35,16 +35,16 @@ DLLPREFIX = lib
 WX_RELEASE = 2.6
 LIBDIRNAME = $(top_wxbuilddir)lib
 
-CANALLOGGER_OBJECTS =  can232drv.o can232obj.o ../../../../common/guid.o ../../../../../common/dllist.o  ../../../../../common/com.o
+CAN232DRV_OBJECTS =  vscpl1_can232drv.o can232obj.o ../../../../common/guid.o ../../../../../common/dllist.o  ../../../../../common/com.o
 PROJOBJS = ../../../../common/guid.o ../../../../../common/dllist.o 
 
 
 ### Targets: ###
 
-all: can232drv.so test
+all: vscpl1_can232drv.so test
 
 install: all
-	$(INSTALL_PROGRAM) can232drv.so $(libdir)
+	$(INSTALL_PROGRAM) vscpl1_can232drv.so $(libdir)
 
 uninstall: 
 
@@ -56,7 +56,7 @@ clean:
 	rm -f ../common/*.o
 	rm -f ../../../../common/*.o
 	rm -f ../../../../../common/*.o
-	rm -f can232drv.so
+	rm -f vscpl1_can232drv.so
 	rm -f test
 	rm -rf ../common/*~
 	rm -rf *~
@@ -64,16 +64,12 @@ clean:
 distclean: clean
 	rm -f config.cache config.log config.status bk-deps bk-make-pch shared-ld-sh Makefile
 
-#can232drv: $(CANALLOGGER_OBJECTS)
-#	$(CXX) -o $@ $< $(CANALLOGGER_OBJECTS) $(LDFLAGS) -L$(LIBDIRNAME) $(WXLIBS) $(EXTRALIBS)
-	
-
 test:  test.o $(PROJOBJS)
 	$(CXX) -o $@ test.o $(PROJOBJS) $(LDFLAGS) -L$(LIBDIRNAME) $(WXLIBS) $(EXTRALIBS)
 
 # Build the Linux DL
-%.so: %.o $(CANALLOGGER_OBJECTS)
-	$(CXX) -o $@ $(CANALLOGGER_OBJECTS) $(DLFLAGS) -L$(LIBDIRNAME) $(WXLIBS) $(EXTRALIBS) 
+%.so: %.o $(CAN232DRV_OBJECTS)
+	$(CXX) -o $@ $(CAN232DRV_OBJECTS) $(DLFLAGS) -L$(LIBDIRNAME) $(WXLIBS) $(EXTRALIBS) 
 
 # Include dependency info, if present:
 -include .deps/*.d
