--- a/src/vscp/drivers/level1/logger/linux/Makefile.in
+++ b/src/vscp/drivers/level1/logger/linux/Makefile.in
@@ -35,16 +35,16 @@ DLLPREFIX = lib
 WX_RELEASE = 2.6
 LIBDIRNAME = $(top_wxbuilddir)lib
 
-CANALLOGGER_OBJECTS =  vscpl1_canallogger.o ../common/log.o ../../../../common/guid.o ../../../../../common/dllist.o 
+CANALLOGGER_OBJECTS =  vscpl1_loggerdrv.o ../common/log.o ../../../../common/guid.o ../../../../../common/dllist.o 
 PROJOBJS        =     ../../../../common/guid.o  ../../../../../common/dllist.o 
 
 
 ### Targets: ###
 
-all: vscpl1_canallogger.so test
+all: vscpl1_loggerdrv.so test
 
 install: all
-	$(INSTALL_PROGRAM) vscpl1_canallogger.so $(libdir)
+	$(INSTALL_PROGRAM) vscpl1_loggerdrv.so $(libdir)
 
 uninstall: 
 
@@ -56,7 +56,7 @@ clean:
 	rm -f ../common/*.o
 	rm -f ../../../../common/*.o
 	rm -f ../../../../../common/*.o
-	rm -f vscpl1_canallogger.so
+	rm -f vscpl1_loggerdrv.so
 	rm -f test
 
 distclean: clean
