--- a/src/vscp/drivers/level1/peak/win32/testpcan/testpcan.vcxproj
+++ b/src/vscp/drivers/level1/peak/win32/testpcan/testpcan.vcxproj
@@ -146,7 +146,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\..\..\common\dllist.c" />
+    <ClCompile Include="..\..\..\..\..\..\common\dllist.c" />
     <ClCompile Include="..\..\common\peakobj.cpp" />
     <ClCompile Include="StdAfx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
