--- a/src/vscp/drivers/level1/peak/win32/testpcan/testpcan.vcxproj.filters
+++ b/src/vscp/drivers/level1/peak/win32/testpcan/testpcan.vcxproj.filters
@@ -15,9 +15,6 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\..\..\common\dllist.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\common\peakobj.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -28,6 +25,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="testpcanDlg.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\..\..\common\dllist.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
